# Twitter_sentiment_MLOPS

./: .gitignore  CoverageReport.py  LICENSE  README.md  cloudbuild.yaml  config_cpu.yaml  config_gpu.yaml  data_drift.py  fit-pytorch_profiler_logs.txt  profilejob  pyproject.toml  report.html  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: test.yaml  test.yml
api/: database.csv  requirements.txt
api/app/: api.py
data/processed/: .gitignore  category_mapping.txt  labels.pt  labels.pt.dvc  labels_test.pt.dvc  text_embeddings.pt  text_embeddings.pt.dvc  text_embeddings_test.pt.dvc
data/raw/: .gitignore  twitter_training.csv.dvc  twitter_validation.csv.dvc
dockerfiles/: KNN_train.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
legacy/: PCA.py  train_model_config.yaml  train_model_hydra.py  train_model_sweep_wandb.py
models/: first_model.pth
notebooks/: twitter_data_walkthrough.ipynb
profiler_logs/: fit-pytorch_profiler_logs-[Strategy]SingleDeviceStrategy.training_step.1705487453368516875.pt.trace.json  fit-pytorch_profiler_logs-[Strategy]SingleDeviceStrategy.validation_step.1705487502836496459.pt.trace.json  fit-pytorch_profiler_logs.txt  fit-simple_profiler_logs.txt
reports/: README.md  report.py
tests/: test_data.py  test_train.py
twitter_sentiments_MLOPS/: KNN_predict.py  __init__.py  api.py  delete_later.py  evaluate_model.py  predict_model.py  sweep.yaml  torch_profiler.py  train_model.py  train_model_hydra.py  train_model_sweep_wandb.py  try_ing_quant.py
wandb/: latest-run
(+500 files in other folders)
